# flagsmith-rust-flag-engine

./: .gitmodules  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  release-please-config.json
.github/workflows/: publish-cargo-package.yml  pull-request.yml
src/: engine.rs  error.rs  lib.rs  main.rs  python.rs
src/engine_eval/: context.rs  mappers.rs  mod.rs  result.rs  segment_evaluator.rs
src/environments/: builders.rs  mod.rs
src/features/: featurestate_value.rs  mod.rs
src/identities/: builders.rs  mod.rs
src/organisations/: mod.rs
src/projects/: mod.rs
src/segments/: constants.rs  evaluator.rs  mod.rs
src/types/: mod.rs
src/utils/: datetime.rs  hashing.rs  mod.rs
tests/: engine_eval_test.rs  fixtures.rs  mappers_test.rs  segment_evaluator.rs  segment_evaluator_test.rs  tests.rs
tests/engine_tests/: engine_tests.rs
tests/fixtures/: mod.rs
