[package]
name = "flagsmith-flag-engine"
version = "0.4.0"
authors = ["Gagan Trivedi <gagan.trivedi@flagsmith.com>"]
edition = "2021"
description = "This project is the rust clone of flagsmith flag engine: https://github.com/Flagsmith/flagsmith-engine"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["Flagsmith", "feature-flag", "remote-config", "flag-engine"]
categories = ["config", "api-bindings"]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10.1"
num-bigint = "0.4"
num-traits = "0.2.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
semver = "1.0"
sha2 = "0.10"

[dev-dependencies]
rstest = "0.12.0"
json_comments = "0.2"
